[gd_scene load_steps=2 format=3 uid="uid://b8qxvw7x8qxvw"]

[ext_resource type="Script" uid="uid://bb8gim8rl235o" path="res://scenes/main/main_scene.gd" id="1_0hdqx"]

[node name="Main" type="Node"]
script = ExtResource("1_0hdqx")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
text = "NexeumVs"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="UI/MainMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="GameWorld" type="Node3D" parent="."]
visible = false

[node name="Arena" type="Node3D" parent="GameWorld"]

[node name="Players" type="Node3D" parent="GameWorld"]

[node name="BuildingSystem" type="Node3D" parent="GameWorld"]

[node name="Camera3D" type="Camera3D" parent="GameWorld"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 10)
